--- a/httpd.yml
+++ b/httpd.yml
@@ -1,6 +1,6 @@
 ---
 - name: This sets up an httpd webserver
-  hosts: Lab VM's
+  hosts: all
   tasks:
   - name: Install the httpd rpm
     yum: name=httpd
