--- a/ovirt_guest.yml
+++ b/ovirt_guest.yml
@@ -3,9 +3,7 @@
   hosts: all
   tasks:
   - name: install ovirt guest agent
-    yum:
-      name: ovirt-guest-agent-common
-      state: present
+    yum: name=ovirt-guest-agent-common
   
   - name: start guest agent
     service: name=ovirt-guest-agent.service state=started
