--- a/ovirt_guest.yml
+++ b/ovirt_guest.yml
@@ -11,18 +11,10 @@
     service: 
       name: ovirt-guest-agent.service 
       state: started
-   
-  - name: enable guest agent
-    service: 
-      name: ovirt-guest-agent.service 
-      state: enabled
+      enabled: yes
       
   - name: start qemu
     service: 
       name: qemu-guest-agent.service 
       state: started
-  
-  - name: enable qemu
-    service: 
-      name: qemu-guest-agent.service 
-      state: enabled
+      enabled: yes
