--- a/ovirt_guest.yml
+++ b/ovirt_guest.yml
@@ -2,6 +2,9 @@
 - name: This installs guest agents on VM
   hosts: all
   tasks:
+  -name: add RHEL common repo
+   rhsm_repository: rhel-7-server-rh-common-rpms
+   
   - name: install ovirt guest agent
     yum: 
       name: ovirt-guest-agent-common
