--- a/ovirt_guest.yml
+++ b/ovirt_guest.yml
@@ -3,7 +3,8 @@
   hosts: all
   tasks:
   -name: add RHEL common repo
-   rhsm_repository: rhel-7-server-rh-common-rpms
+   rhsm_repository: 
+     name: rhel-7-server-rh-common-rpms
    
   - name: install ovirt guest agent
     yum: 
