--- a/ovirt_guest.yml
+++ b/ovirt_guest.yml
@@ -5,6 +5,7 @@
   - name: add RHEL common repo
     rhsm_repository: 
       name: rhel-7-server-rh-common-rpms
+      state: enabled
    
   - name: install ovirt guest agent
     yum: 
