--- a/httpd_landing.yml
+++ b/httpd_landing.yml
@@ -2,15 +2,15 @@
 - name: change landing page
   hosts: all
   tasks:
-  - name: Create Insight Landing Page 
+  - name: Create Landing Page 
     shell: |
       echo '
       <!DOCTYPE html>
       <html>
-      <head> Welcome to the Insight HTTPD test page </head>
+      <head> Welcome to the HTTPD test page </head>
       <body>
 
-      <img src="https://i.lensdump.com/i/vUJhT.png" alt="vUJhT.png" border="0" />
+      <img src=<img src="https://i2.lensdump.com/i/raHq65.jpg" alt="raHq65.jpg" border="0"><img src="https://i2.lensdump.com/i/raHq65.jpg" alt="raHq65.jpg" border="0">
 
       </body>
       </html>
