--- a/httpd_landing.yml
+++ b/httpd_landing.yml
@@ -11,7 +11,7 @@
         <head> Welcome to the HTTPD test page </head>
         <body>
 
-        <img src="https://i2.lensdump.com/i/raHq65.jpg" alt="raHq65.jpg" border="0"><img src="https://i2.lensdump.com/i/raHq65.jpg" alt="raHq65.jpg" border="0">
+        <a href="https://lensdump.com/i/raHq65"><img src="https://i2.lensdump.com/i/raHq65.jpg" alt="raHq65.jpg" border="0"></a><a href="https://lensdump.com/i/raHq65"><img src="https://i2.lensdump.com/i/raHq65.jpg" alt="raHq65.jpg" border="0"></a>
 
         </body>
         </html>
