--- a/httpd_landing.yml
+++ b/httpd_landing.yml
@@ -8,7 +8,7 @@
       content: |
         <!DOCTYPE html>
         <html>
-        <head> Welcome to the HTTPD test page </head>
+        <h1 style="font-size: 4rem"> Welcome to the HTTPD test page </h1>
         <body>
 
         <a href="https://lensdump.com/i/raHq65"><img src="https://i2.lensdump.com/i/raHq65.md.jpg" alt="raHq65.md.jpg" border="0"></a>
