--- a/install_insights.yml
+++ b/install_insights.yml
@@ -3,5 +3,4 @@
   hosts: all
   tasks:
   - name: Register the insights client
-    insights_register:
-      state: present
+    command: insights-client --register
