--- a/scan_pack_install.yml
+++ b/scan_pack_install.yml
@@ -6,13 +6,16 @@
     yum:
       name: scap-security-guide
       state: present
+      version: latest
     
   - name: Install openscap scanner
     yum: 
       name: openscap-scanner
       state: present
+      version: latest
       
   - name: Install openscap 
     yum: 
       name: openscap
       state: present
+      version: latest
