--- a/install_insights.yml
+++ b/install_insights.yml
@@ -1,4 +1,8 @@
 ---
-- name: Register the insights client
-  insights_register:
-    state: present
+- name: install insights
+  hosts: all
+  tasks:
+
+  - name: Register the insights client
+    insights_register:
+      state: present
